# replifactory_v7

./: .gitignore  Makefile  docker-compose.yml  ecosystem.config.js  ngrok.yml
flask_app/: .dockerignore  Dockerfile  entrypoint.sh  fastapi_app.py  fastapi_db.py  notebook.py  pyproject.toml  requirements-lock.txt  requirements.txt  server.py  win32_service.py  win32_service.spec
flask_app/experiment/: culture.py  database_models.py  db.py  experiment.py  experiment_manager.py  experiment_v6.py  export.py  gptexperiment.py  growth_rate.py  models.py  plot.py  workers.py
flask_app/experiment/ModelBasedCulture/: culture_growth_model.py  model_equations.py  model_equations_plotting.py  morbidostat_updater.py  real_culture_wrapper.py
flask_app/experiment/culture/: batch.py  blank.py  chemostat.py  culture_functions.py  lagoon_seva.py  stress_ramp.py  turbidostat.py
flask_app/fastapi_routes/: device_routes.py  experiment_routes.py
flask_app/minimal_device/: adc.py  base_device.py  blank.py  device_data.py  dilution.py  eeprom.py  lasers.py  led.py  od_sensor.py  other.py  pwm.py  stepper.py  stirrers.py  test_hardware.py  thermometers.py  valves.py  virtual_device.py  workers.py
flask_app/routes/: camera_routes.py  device_routes.py  experiment_routes.py  service_routes.py
flask_app/templates/: stirrer_speeds_plot.html
flask_app/tests/: culture_test.py  culture_tests.py  culture_update_test.py  db _update_test.py  device_test.py  experiment_routes_tests.py  experiment_test.py  plot_test.py  simulation_test.py  tests.py
flask_app/tests/debug/: debug_device.py  (+1 more)
(+184 files in other folders)
